src/test/deca/context/invalid/classDefinition-extendsSameClass.context
classDefinition-extendsSameClass.deca:1:
